Eliminate dependency on sun.net