@@ -1749,7 +1749,6 @@ POSSIBILITY OF SUCH DAMAGE.
           <compilerArgs>
             <arg>-XDenableSunApiLintControl</arg>
             <!-- Needed by lockss-core -->
-            <arg>--add-exports</arg><arg>java.base/sun.net=ALL-UNNAMED</arg>
             <arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
 
           </compilerArgs>
